# assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  devenv.nix  docker-compose-local.yml  docker-compose.yml  flake.nix  lunches.py  package.nix  public_transport.py  pyproject.toml  renovate.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post_attach.sh
.github/workflows/: build.yaml  deploy.yml  lint.yaml  test.yaml  validation.yaml
backend/: app.py  lunches.py
backend/templates/: public_transport.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  Date.svelte  Fireworks.svelte  License.svelte  Loader.svelte  LocationFilter.svelte  Nextbikes.svelte  Timeline.svelte  app.css  main.js
nix/: backend.nix  common.nix  frontend.nix  module.nix
templates/: lunch.html  public_transport.html
tests/: lunch.test.js
