[project]
name = "lunchmenu"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Trnka", email = "daniel.trnka@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "selectolax>=0.3.21,<0.4",
    "fastapi[standard]>=0.115.7,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "redis[hiredis]>=5.0.7,<6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1,<5",
    "ruff>=0.9.3,<0.10",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C4", # flake8-comprehensions
    "E", # Error
    "I", # isort
    "F", # pyflakes
    "N", # pep8-naming
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # Warning
    "YTT", # flake8-2020
]
ignore = ["N806"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
