[project]
name = "lunchmenu"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Trnka", email = "daniel.trnka@gmail.com" }]
requires-python = "~=3.13.7"
readme = "README.md"
dependencies = [
    "httpx>=0.28.1,<0.29",
    "selectolax>=0.4,<0.5",
    "fastapi[standard]>=0.122,<0.123",
    "uvicorn[standard]>=0.38,<0.39",
    "redis[hiredis]>=7,<8",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.1,<5",
    "ruff>=0.14,<0.15",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C4", # flake8-comprehensions
    "E", # Error
    "I", # isort
    "F", # pyflakes
    "N", # pep8-naming
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # Warning
    "YTT", # flake8-2020
]
ignore = ["N806"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
